[gd_scene load_steps=4 format=3 uid="uid://dk5nt5y2dm1ns"]

[ext_resource type="Script" path="res://scenes/player/bird.gd" id="1_loqs2"]
[ext_resource type="Texture2D" uid="uid://bl45pohkfn2iq" path="res://assets/player/parrot.png" id="1_v8for"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nhwpb"]
radius = 25.0

[node name="Bird" type="RigidBody2D"]
input_pickable = true
freeze = true
script = ExtResource("1_loqs2")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_v8for")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nhwpb")

[node name="StateLabel" type="Label" parent="."]
offset_left = -25.0
offset_top = -52.0
offset_right = 27.0
offset_bottom = -29.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "debug"
horizontal_alignment = 1
vertical_alignment = 2

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_player_screen_exited"]
